--- a/programming_language/templates/index.html
+++ b/programming_language/templates/index.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="input">Input:</label>
-            <input type="text" name="input" value="{{request.POST.input}}" size="40" />
+            <input type="text" name="inputs" value="{{request.POST.inputs}}" size="40" />
         </div>
         <div class="form-group">
             <label for="source_code">Source Code:</label>
@@ -27,7 +27,7 @@ Abstract Syntax Tree:
         </div>
         <div class="form-group">
             <label for="output">Output:</label>
-            <input type="text" name="output" value="{{ output.value }}" size="40" readonly/>
+            <input type="text" name="output" value="{{ output }}" size="40" readonly/>
         </div>
         <p><button type="submit" class="btn btn-info" style="width: 100px;">Run</button></p>
     </form>
